<resources>
    <string name="app_name">MadCapstoneProject</string>
    <string name="title_activity_maps">Map</string>

    <!-- Map Style IDs -->
    <string name="map_id">23d2bbb74e611da2</string>

    <!-- Main -->
    <string name="warning_enable_location">Please check if your location is enabled!</string>
    <string name="profile_image_folder">profile_pictures</string>

    <!-- Database Entries -->
    <string name="db_user_username">username</string>
    <string name="db_user_total_score">totalScore</string>
    <string name="db_user_total_time">totalTime</string>
    <string name="db_user_total_distance">totalDistance</string>
    <string name="db_user_runs">runs</string>

    <string name="db_run_route_points">routePoints</string>
    <string name="db_run_distance">distance</string>
    <string name="db_run_time">time</string>
    <string name="db_run_calories">calories</string>
    <string name="db_run_score">score</string>
    <string name="db_run_average_speed">aSpeed</string>

    <!-- Stats -->
    <string name="stats_distance">Distance</string>
    <string name="stats_speed">Speed</string>
    <string name="stats_calories">Cals.</string>
    <string name="stats_score">Score</string>
    <string name="stats_distance_metric">km</string>
    <string name="stats_speed_metric">km/h</string>

    <!-- Friends -->
    <string name="friends_find">Find Friends</string>
    <string name="friends_vs">vs</string>
    <string name="friends_hours">%1$d Hours</string>

    <!-- Leaderboard -->
    <string name="leaderboard_points">pts</string>
    <string name="leaderboard_leaderboard">Leaderboard</string>

    <!-- Profile/Settings -->
    <string name="profile_edit">Edit Profile</string>
    <string name="settings_notifications">Push Notifications</string>
    <string name="settings_theme">Switch Theme</string>
    <string name="settings_invite_friends">Invite Friends</string>
    <string name="settings_about">About the app</string>
    <string name="profile_private">Private</string>
    <string name="user_id">user_id</string>
    <string name="profile_history">History</string>
    <string name="profile_no_history">There aren\'t any runs!</string>

    <!-- Menu -->
    <string name="menu_friends">Friends</string>
    <string name="menu_leaderboard">Leaderboard</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_stats">Stats</string>

    <!-- First Experience -->
    <string name="first_name_hint">Username</string>
    <string name="first_private_eg">*A private account will not be visible on the leaderboard</string>
    <string name="first_start">Start</string>
    <string name="first_creating_profile">Creating Profile</string>
    <string name="first_profile_created">Profile Created</string>
    <string name="first_profile_failed">Failed to create profile</string>
    <string name="first_select_image">Select A Profile Picture</string>
    <string name="fist_take_a_while">This shouldn\'t take a while.</string>

    <!-- Battle -->
    <string name="battle_time">%s</string>
    <string name="battle_distance">%.2f km</string>
    <string name="battle_speed">%.2f km/h</string>
    <string name="battle_points">%o pts</string>
    <string name="battle_failed_get_user">Failed to get user stats!</string>
    <string name="battle_failed_get_friend">Failed to get friends stats!</string>
</resources>