<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/miStats"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/menu_stats"
        android:titleCondensed="@string/menu_stats" />
    <item
        android:id="@+id/miFriends"
        android:icon="@drawable/awesome_user_friends"
        android:title="@string/menu_friends"
        android:titleCondensed="@string/menu_friends" />
    <item
        android:id="@+id/miLeaderboard"
        android:icon="@drawable/icons8_leaderboard_100"
        android:title="@string/menu_leaderboard"
        android:titleCondensed="@string/menu_leaderboard" />
    <item
        android:id="@+id/miProfile"
        android:icon="@drawable/profile_icon"
        android:title="@string/menu_profile"
        android:titleCondensed="@string/menu_profile" />
</menu>