<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivLogo"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="140dp"
        android:background="?attr/colorPrimaryVariant"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/Theme.MadCapstoneProject.circleImageView"
        app:srcCompat="@drawable/add_icon" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:ems="10"
        android:fontFamily="@font/open_sans"
        android:hint="@string/first_name_hint"
        android:inputType="textPersonName"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivLogo" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sPrivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:checked="false"
        android:gravity="center_vertical"

        app:layout_constraintEnd_toEndOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <TextView
        android:id="@+id/tvPrivate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/open_sans_bold"
        android:text="@string/profile_private"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/etUsername"
        app:layout_constraintTop_toBottomOf="@+id/etUsername" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/open_sans"
        android:text="@string/first_private_eg"
        android:textColor="?attr/colorOnPrimary"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="@+id/button"
        app:layout_constraintStart_toStartOf="@+id/button" />

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/bg_round_corners"
        android:backgroundTint="?attr/colorOnPrimary"
        android:fontFamily="@font/open_sans"
        android:text="@string/first_start"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:tint="@null" />

</androidx.constraintlayout.widget.ConstraintLayout>