<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".ui.MapsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivProfile"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:background="?attr/colorPrimaryVariant"
            android:scaleType="centerCrop"
            app:shapeAppearanceOverlay="@style/Theme.MadCapstoneProject.circleImageView"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:fontFamily="@font/open_sans_extrabold_italic"
                android:text="Sample Name"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="30sp" />

        </LinearLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                app:cardBackgroundColor="?attr/colorPrimaryVariant"
                app:cardCornerRadius="4dp"
                app:cardElevation="4dp"
                app:cardUseCompatPadding="true"
                app:contentPaddingBottom="5dp"
                app:contentPaddingTop="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/material_remove_red_eye" />

                        <androidx.appcompat.widget.SwitchCompat
                            android:id="@+id/swPrivate"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginEnd="15dp"
                            android:layout_weight="50"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/profile_private"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/bg_round_corners"
                        app:tint="?attr/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/material_share" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="50"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/settings_invite_friends"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="18sp" />
                    </LinearLayout>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:scaleType="fitCenter"
                        app:srcCompat="@drawable/bg_round_corners"
                        app:tint="?attr/colorPrimary" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/material_info" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_marginStart="10dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:layout_weight="50"
                            android:fontFamily="@font/open_sans"
                            android:text="@string/settings_about"
                            android:textColor="?attr/colorOnPrimary"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="35dp"
                android:fontFamily="@font/open_sans_extrabold"
                android:text="@string/profile_history"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvNoRuns"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/open_sans_light"
                android:text="@string/history_no_history"
                android:textAlignment="center"
                android:textColor="?attr/colorOnPrimary"
                android:textSize="18sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/item_history_run">

            </androidx.recyclerview.widget.RecyclerView>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>